# emurgo-haskell-project

./: .gitignore  README.md  segment-tree-examples.cabal
app/: at-practice2-j.hs  at-practice2-k.hs  at-practice2-l.hs  cf-457D2-D.hs
